fix(style): read_only_piles were not visible after countdown

--- a/dobble.css
+++ b/dobble.css
@@ -419,7 +419,7 @@ html {
 
 /* Countdown*/
 .dbl_invisible {
-  display: none;
+  display: none !important;
   /*transition: all 1s ease-out;*/
 }
 
